# alma-letters

./: .env.example  .gitignore  README.md  Resource Sharing Return Slip Letter.xml  components.txt  export_letters.py  letters.txt  pyproject.toml
Resource Sharing Return Slip Letter/: Resource Sharing Return Slip Letter.xml
components/: footer.xsl  header.xsl  mailReason.xsl  senderReceiver.xsl  style.xsl
letters/: BorrowingActivityLetter.xsl  FineFeePaymentReceiptLetter.xsl  FulCancelRequestLetter.xsl  FulItemChangeDueDateLetter.xsl  FulLoanReceiptLetter.xsl  FulOnHoldShelfReminderLetter.xsl  FulOverdueAndLostLoanLetter.xsl  FulOverdueAndLostLoanNotificationLetter.xsl  FulPlaceOnHoldShelfLetter.xsl  FulReturnReceiptLetter.xsl  FulUserBorrowingActivityLetter.xsl  FulUserLoansCourtesyLetter.xsl  FulUserOverdueNoticeLetter.xsl  LendingRecallEmailLetter.xsl  ResendNotificationLetter.xsl
